# jpp

./: .gitmodules  CMakeLists.txt  README.md  action_map.cpp  action_map.hpp  action_view.cpp  action_view.hpp  command.hpp  controller.hpp  document.cpp  document.hpp  document_view.hpp  editor.cpp  editor.hpp  filegen.cpp  form_dialog.cpp  form_dialog.hpp  history.hpp  insert_command.cpp  insert_command.hpp  main.cpp  menu.cpp  menu.hpp  object.cpp  object.hpp  rect.hpp  result.hpp  status_view.hpp  terminal.cpp  terminal.hpp  tree_view.cpp  tree_view.hpp  user_interface.cpp  user_interface.hpp  view.hpp  viewer.hpp
